# jujutsuka

./: .tool-versions  AGENTS.md  INTENTIONS.md  SPEC.md  justfile
backend/: nodemon.json  package-lock.json  package.json  tsconfig.json
backend/src/: commands-simple.test.ts  commands.test.ts  index.ts  layout-utils.test.ts  layout-utils.ts  repo-parser.test.ts  repo-parser.ts  routes.ts  stack-processor.test.ts  test-helpers.ts  trpc.ts  watcher.ts
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/tests/: cli_tests.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ChangeCard.tsx  CommitGraph.tsx  DiffHunk.tsx  DiffPanel.stories.tsx  DiffPanel.tsx  DragDropContext.tsx  FileListPanel.module.css  FileListPanel.tsx  IdBadges.tsx  LatestUiOperationPanel.tsx  RevsetSelector.tsx  Settings.tsx  StackComponent.tsx  StackGraph.module.css  StackGraph.stories.tsx  StackGraph.tsx  StackGraphComponent.tsx  api.ts  brandedTypes.ts  commands.ts  commitParser.test.ts  diffParsing.ts  dropPosition.ts  forces.ts  graphStore.ts  layout-utils.test.ts  layout-utils.ts  layout.ts  llmService.ts  physics-graph.module.css  physics-graph.stories.tsx  physics-graph.tsx  revsetConfig.ts  stack-processor.test.ts  stackUtils.ts  typed-object.ts  useDragDrop.tsx  useDragState.ts  useGraphData.ts
scripts/: autodescribe
shared/: package.json  tsconfig.json
shared/src/: types.ts
tmp/testrepo/: .nvimlog
